kubernetes/bankapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bankapp-deploy
  name: bankapp-deploy
  namespace: bankapp-namespace
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bankapp-deploy
  template:
    metadata:
      labels:
        app: bankapp-deploy
    spec:
      containers:
      - image: apatranobis59/bankapp:v3
        name: bankapp
        ports:
        - containerPort: 8080
